<resources>
    <string name="app_name">Warehouse Inventory App</string>
    <string name="navigation_drawer_open">drawer has been opened</string>
    <string name="navigation_drawer_close">drawer has been closed</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="cost">Cost</string>
    <string name="description">Description</string>
    <string name="frozen">Frozen Item?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="add_item">Add new item</string>
    <string name="clear_item">Clear all items</string>
</resources>
